Fixed the spacing around the section headers

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,8 +1,8 @@
 .block-element {
     background-color: $block-background-color;
     border-radius: $block-border-radius;
-    padding: $block-padding $block-padding * 1.5;
-    border: 1px solid black;
+    padding: $block-vertical-padding $block-horizontal-padding;
+    border: 1px solid $outline-color;
     margin: 0 0 $block-spacing 0;
 
     & > :first-child {
@@ -14,8 +14,8 @@
     }
 }
 
-.area-separator {
-    height: 1px;
-    background-color: black;
-    margin: -1rem;
+.section-header {
+    border-bottom: 1px solid $outline-color;
+    padding: 0px $block-horizontal-padding 1rem;
+    margin: 0px #{$block-horizontal-padding * -1};
 }
