--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,19 +1,19 @@
 @charset "utf-8";
 
-$body-background-color: #2c2b2c;
+$body-background-color: #262328;
 $body-padding: 0.8rem;
 
-$block-background-color: #4d4b4e;
-$block-border-radius: 0.5rem;
+$block-background-color: #484449;
+$outline-color: black;
+$block-border-radius: 0.75rem;
+$block-vertical-padding: 1rem;
+$block-horizontal-padding: 1.5rem;
+$block-spacing: 1rem;
 
-$text-color: #dddddd;
+$text-color: #e8e8e8;
 
 $link-color: #e57bff;
 $visited-link-color: darken($link-color, 10%);
 
 $tertiary-color: #8b8b8b;
 $secondary-accent: #787878;
-
-$block-spacing: 1rem;
-
-$block-padding: 1rem;
